--- a/ann_with_pytorch.ipynb
+++ b/ann_with_pytorch.ipynb
@@ -763,6 +763,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "앞서 정의한 모델을 생성하고 손실함수와 최적화방법을 선정합니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
@@ -806,6 +813,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* zero_grad( ): 이름 그대로 모든 그레이디언트(gradient)를 0으로 초기화합니다.\n",
+    "* step( ): 계산된 그레이디언트를 기반으로 매개변수들(가중치, 편향치)을 갱신합니다.\n",
+    "\n",
     "이제 성능을 측정하기 위해 테스트 데이터를 불러와 전처리 작업을 진행합니다."
    ]
   },
@@ -1194,7 +1204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
